--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <a href="#hero" class="nav-link scrollto active"></a><a target="_blank" href="https://schmelman.github.io/Curriculum_Vitae/">Español     |  </a> <a target="_blank" href="https://schmelman.github.io/Curriculum_vitae_english/">English     |  </a> <a target="_blank" href=https://schmelman.github.io/Portafolio-italiano/> Italiano</a>
+        <a href="#hero" class="nav-link scrollto active"></a><a target="_blank" href="https://schmelman.github.io/Portafolio/">Español  |  </a> <a target="_blank" href="https://schmelman.github.io/Curriculum_Vitae_Ingles/">English  |  </a> <a target="_blank" href="https://schmelman.github.io/Portafolio-italiano/"> Italiano</a>
         <img src="assets/img/profile1-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Patricio Capurro</a></h1>
         <div class="social-links mt-3 text-center">
