--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                   href="https://www.linkedin.com/in/patricio-augusto-capurro-2ab73b21a">Patricio Augusto Capurro</a>
                 </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Español:</strong> <span>Nativo</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Italiano:</strong> <span>Avanzado</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Ingles:</strong> <span>Intermedio</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Italiano:</strong> <span>B2 Avanzado</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Ingles:</strong> <span>B1 Intermedio</span></li>
                   
                 </ul>
               </div>
@@ -319,14 +319,14 @@
 
             <div class="resume-item">
               <h4>Barista /2021</h4>
-              <h5>Victory Bar Caffetteria..</h5>
+              <h5>Victory Bar Caffetteria.</h5>
               <h6>Via Borgo Adda, Lodi, Italia.</h6>
               <p>Preparación de café, atención al cliente (mesas y barra), limpieza y
                 administración de personal.</p>
             </div>
             <div class="resume-item">
               <h4>Mozo de salón /2018 - 2019</h4>
-              <h5>Restaurante Ohana</h5>
+              <h5>Restaurante Ohana.</h5>
               <h6>Tucumán 2101, Buenos Aires, Argentina</h6>
               <p>Atención en salón y barra, preparación de café y delivery.
                 </p>
@@ -338,31 +338,31 @@
             <div class="resume-item">
               <h4>Administración de Nube Azure / 2023</h4>
               <h5>Junior Achievement y Microsoft.</h5>
-              <p>Durante el curso adquiri conocimientos en: Azure, HTML, CSS, Bootstrap y JavaScript</p>
+              <p>Durante el curso adquiri conocimientos en: Azure, HTML, CSS, Bootstrap y JavaScript.</p>
 
             </div>
             <div class="resume-item">
               <h4>FullStack Java / 2023</h4>
               <h5>Codo a codo 4.0.</h5>
-              <p>Durante el curso adquiri conocimientos en: Java, PHP, HTML, CSS, Bootstrap, JavaScript y MySQL</p>
+              <p>Durante el curso adquiri conocimientos en: Java, PHP, HTML, CSS, Bootstrap, JavaScript y MySQL.</p>
             </div>
 
             <div class="resume-item">
               <h4>FullStack Java / 2023</h4>
               <h5>Argentina Programa 4.0, Egg.</h5>
-              <p>Durante el curso adquiri conocimientos en: Java, Spring Boot, GIT/GITHUB, MySQL, JDBC/JPA, HTML, CSS y JavaScript</p>
+              <p>Durante el curso adquiri conocimientos en: Java, Spring Boot, GIT/GITHUB, MySQL, JDBC/JPA, HTML, CSS y JavaScript.</p>
             </div>
 
             <div class="resume-item">
               <h4>C++ / 2023</h4>
               <h5>QUARK Academy.</h5>
-              <p>Durante el curso adquiri conocimientos en: C++ y GIT/GITHUB</p>
+              <p>Durante el curso adquiri conocimientos en: C++ y GIT/GITHUB.</p>
             </div>
 
             <div class="resume-item">
               <h4>Introducción a la programación / 2022</h4>
               <h5>Argentina Programa 4.0, Egg.</h5>
-              <p>Durante el curso adquiri conocimientos en: Pseint</p>
+              <p>Durante el curso adquiri conocimientos en: Pseint.</p>
             </div>
 
           </div>
